Added main and section classes with headers only, for About, Work, and Contact.

--- a/index.html
+++ b/index.html
@@ -21,3 +21,15 @@
         </nav>
     </header>
   </body>
+
+  <main>
+    <section class="About">
+        <h2>About</h2>
+    </section>
+    <section class="Work">
+        <h2>Work</h2>
+    </section>
+    <section class="Contact">
+        <h2>Contact</h2>
+    </section>
+  </main>
