Add 4 project cards and added media querty for card stacking.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <title>Maria Cunha Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css">
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-    <!-- Page Title -->
+        <!-- Page Title -->
         <h1>Maria Cunha's Portfolio</h1>
-    <!-- Navigation -->
+        <!-- Navigation -->
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
@@ -20,16 +20,49 @@
             </ul>
         </nav>
     </header>
-  </body>
 
-  <main>
-    <section class="About">
-        <h2>About</h2>
-    </section>
-    <section class="Work">
-        <h2>Work</h2>
-    </section>
-    <section class="Contact">
-        <h2>Contact</h2>
-    </section>
-  </main>
+    <main>
+        <!-- About Section -->
+        <section class="About">
+            <header>About</header>
+        </section>
+
+        <!-- Work Section -->
+        <section class="work">
+            <header>Work</header>
+
+            <!-- Project Cards -->
+            <article class="projects">
+
+                <!-- Project 1 -->
+
+                <!-- Project 2 -->
+                <figure class="card">
+                    <header>Project 2</header>
+                     <img scr="" alt="Image 1"/>
+                </figure>
+
+                <!-- Project 3 -->
+                <figure class="card">
+                     <header>Project 3</header>
+                    <img scr="" alt="Image 2"/>
+                </figure>
+
+                <!-- Project 4 -->
+                <figure class="card">
+                      <header>Project 4</header>
+                      <img scr="" alt="Image 3"/>
+                </figure>
+
+                <!-- Project 5 -->
+                <figure class="card">
+                      <header>Project 5</header>
+                      <img scr="" alt="Image 4"/>
+                </figure>
+            </article>
+        </section>
+
+     <!-- Contact Section -->
+        <section class="Contact">
+            <header>Contact</header>
+        </section>
