--- a/index.html
+++ b/index.html
@@ -23,46 +23,54 @@
 
     <main>
         <!-- About Section -->
-        <section class="About">
-            <header>About</header>
-        </section>
-
-        <!-- Work Section -->
-        <section class="work">
-            <header>Work</header>
-
-            <!-- Project Cards -->
-            <article class="projects">
-
-                <!-- Project 1 -->
-
-                <!-- Project 2 -->
-                <figure class="card">
-                    <header>Project 2</header>
-                     <img scr="" alt="Image 1"/>
-                </figure>
-
-                <!-- Project 3 -->
-                <figure class="card">
-                     <header>Project 3</header>
-                    <img scr="" alt="Image 2"/>
-                </figure>
-
-                <!-- Project 4 -->
-                <figure class="card">
-                      <header>Project 4</header>
-                      <img scr="" alt="Image 3"/>
-                </figure>
-
-                <!-- Project 5 -->
-                <figure class="card">
-                      <header>Project 5</header>
-                      <img scr="" alt="Image 4"/>
-                </figure>
+        <section>
+            <article class="aside">
+                <header>About</header>
+            </article>
+            <article class="content">
+                <p>Placeholder text.</p>
             </article>
         </section>
 
-     <!-- Contact Section -->
-        <section class="Contact">
-            <header>Contact</header>
+        <section>
+            <article class="aside">
+                <header>Work</header>
+            </article>
+
+            <article class="content">
+
+                <div class="projects-1">
+                    <div class="primary-image-column">
+                        <img class="primary-image"src="/assets/refactored-site.png">
+                    </div>
+                </div>
+
+                <div class="projects-2">
+                    <div class="card">
+                        <img src="/assets/refactored-site.png">
+                    </div>
+                    <div class="card">
+                        <img src="/assets/refactored-site.png">
+                    </div>
+                </div>
+
+                <div class="projects-2">
+                    <div class="card">
+                        <img src="/assets/refactored-site.png">
+                    </div>
+                    <div class="card">
+                        <img src="/assets/refactored-site.png">
+                    </div>
+                </div>
+
+            </article>
+        </section>
+
+        <section>
+            <article class="aside">
+                <header>About</header>
+            </article>
+            <article class="content">
+                <p>Placeholder text.</p>
+            </article>
         </section>
