Adding text for About Me section, added styling to headings in aside.

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <!-- About Section -->
         <section>
             <article class="aside">
-                <header>About</header>
+                <h2>About</h2>
             </article>
             <article class="content">
-                <p>Placeholder text.</p>
+                <p>As a product marketing professional, I have spent the last few years working in the tech industry, promoting and launching software products. However, I have always had a passion for technology and a desire to be more involved in the development process. Over time, I have come to realize that I want to transition into a career as a developer. My background in product marketing has provided me with valuable skills such as project management, collaboration, and communication. I have worked closely with development teams and have a solid understanding of the software development process. However, I want to expand my skill set and become more involved in the technical aspects of product development. To achieve this, I have been taking online courses in programming languages such as Python and JavaScript. I have also been working on personal projects, such as building simple web applications, to gain hands-on experience. My goal is to become a full-stack developer and contribute to the creation of innovative software products. I am excited about the prospect of combining my marketing background with my newfound technical skills to create impactful products. I am confident that my strong work ethic, determination, and willingness to learn will enable me to succeed in this new career path.</p>
             </article>
         </section>
 
         <section>
             <article class="aside">
-                <header>Work</header>
+                <h2>Work</h2>
             </article>
 
             <article class="content">
@@ -68,7 +68,7 @@
 
         <section>
             <article class="aside">
-                <header>About</header>
+                <h2>About</h2>
             </article>
             <article class="content">
                 <p>Placeholder text.</p>
