Added text over images, explaining projects.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             </article>
         </section>
 
+        <!-- Projects Section -->
         <section>
+            <!-- Work Title -->
             <article class="aside">
                 <h2>Work</h2>
             </article>
-
+            <!-- Project -->
             <article class="content">
 
                 <div class="projects-1">
@@ -46,20 +48,46 @@
                 </div>
 
                 <div class="projects-2">
-                    <div class="card">
-                        <img src="/assets/refactored-site.png">
+                    <div class="project">
+                        <div class="card">
+                            <img src="/assets/refactored-site.png">
+                        </div>
+                        <div class="project-title">
+                            <h3>Client Site App</h3>
+                            <h4>APIs/JSON</h4>
+                        </div>
                     </div>
-                    <div class="card">
-                        <img src="/assets/refactored-site.png">
+
+                    <div class="project">
+                        <div class="card">
+                            <img src="/assets/refactored-site.png">
+                        </div>
+                        <div class="project-title">
+                            <h3>Web App</h3>
+                            <h4>Node/IoT</h4>
+                        </div>
                     </div>
                 </div>
 
                 <div class="projects-2">
-                    <div class="card">
-                        <img src="/assets/refactored-site.png">
+                    <div class="project">
+                        <div class="card">
+                            <img src="/assets/refactored-site.png">
+                        </div>
+                        <div class="project-title">
+                            <h3>EasyGo Game</h3>
+                            <h4>React/NoSQL</h4>
+                        </div>
                     </div>
-                    <div class="card">
-                        <img src="/assets/refactored-site.png">
+                    <div class="project">
+                        <div class="card">
+                            <img src="/assets/refactored-site.png">
+                        </div>
+                            <div class="project-title">
+                                <h3>Single-Page App</h3>
+                                <h4>MERN Stack</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
