Added top navigation links.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <!-- Navigation -->
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,10 +25,18 @@
         <!-- About Section -->
         <section>
             <article class="aside">
-                <h2>About</h2>
+                <h2 id="about">About</h2>
             </article>
-            <article class="content">
-                <p>As a product marketing professional, I have spent the last few years working in the tech industry, promoting and launching software products. However, I have always had a passion for technology and a desire to be more involved in the development process. Over time, I have come to realize that I want to transition into a career as a developer. My background in product marketing has provided me with valuable skills such as project management, collaboration, and communication. I have worked closely with development teams and have a solid understanding of the software development process. However, I want to expand my skill set and become more involved in the technical aspects of product development. To achieve this, I have been taking online courses in programming languages such as Python and JavaScript. I have also been working on personal projects, such as building simple web applications, to gain hands-on experience. My goal is to become a full-stack developer and contribute to the creation of innovative software products. I am excited about the prospect of combining my marketing background with my newfound technical skills to create impactful products. I am confident that my strong work ethic, determination, and willingness to learn will enable me to succeed in this new career path.</p>
+            <article class="content-2">
+
+                <div class="profile">
+                    <div class="maria">
+                        <img class="cunha" src="/assets/maria-cunha.jpeg">
+                    </div>
+                    <div class="bio">
+                        <p>As a product marketing professional, I have spent the last few years working in the tech industry, promoting and launching software products. However, I have always had a passion for technology and a desire to be more involved in the development process. Over time, I have come to realize that I want to transition into a career as a developer. My background in product marketing has provided me with valuable skills such as project management, collaboration, and communication. I have worked closely with development teams and have a solid understanding of the software development process. However, I want to expand my skill set and become more involved in the technical aspects of product development. To achieve this, I have been taking online courses in programming languages such as Python and JavaScript. I have also been working on personal projects, such as building simple web applications, to gain hands-on experience. My goal is to become a full-stack developer and contribute to the creation of innovative software products. I am excited about the prospect of combining my marketing background with my newfound technical skills to create impactful products. I am confident that my strong work ethic, determination, and willingness to learn will enable me to succeed in this new career path.</p>
+                    </div>
+                </div>
             </article>
         </section>
 
@@ -36,7 +44,7 @@
         <section>
             <!-- Work Title -->
             <article class="aside">
-                <h2>Work</h2>
+                <h2 id="work">Work</h2>
             </article>
             <!-- Project -->
             <article class="content">
@@ -44,6 +52,10 @@
                 <div class="projects-1">
                     <div class="primary-image-column">
                         <img class="primary-image"src="/assets/refactored-site.png">
+                    </div>
+                    <div class="primary-project-title">
+                        <h3>Refactored Code</h3>
+                        <h4>HTML/CSS/JS</h4>
                     </div>
                 </div>
 
@@ -96,7 +108,7 @@
 
         <section>
             <article class="aside">
-                <h2>About</h2>
+                <h2 id="contact">About</h2>
             </article>
             <article class="content">
                 <p>Placeholder text.</p>
