Added images for other projects.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/refactored-site.png">
+                            <img src="/assets/coding-image-3.png">
                         </div>
                         <div class="project-title">
                             <h3>Client Site App</h3>
@@ -72,7 +72,7 @@
 
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/refactored-site.png">
+                            <img src="/assets/coding-image-2.png">
                         </div>
                         <div class="project-title">
                             <h3>Web App</h3>
@@ -84,7 +84,7 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/refactored-site.png">
+                            <img src="/assets/coding-image-3.jpg">
                         </div>
                         <div class="project-title">
                             <h3>EasyGo Game</h3>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/refactored-site.png">
+                            <img src="/assets/coding-image.png">
                         </div>
                             <div class="project-title">
                                 <h3>Single-Page App</h3>
@@ -108,9 +108,11 @@
 
         <section>
             <article class="aside">
-                <h2 id="contact">About</h2>
+                <h2 id="contact">Contact</h2>
             </article>
-            <article class="content">
-                <p>Placeholder text.</p>
+            <article class="footer">
+                <div>Phone</div>
+                <div>Email</div>
+                <div>GitHub</div>
             </article>
         </section>
