Added links to photos

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
                 <div class="projects-1">
                     <div class="primary-image-column">
-                        <img class="primary-image"src="/assets/refactored-site.png">
+                        <img class="primary-image" src="/assets/refactored-site.png"></a>
                     </div>
                     <div class="primary-project-title">
-                        <h3>Refactored Code</h3>
+                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h3>Refactored Code</h3></a>
                         <h4>HTML/CSS/JS</h4>
                     </div>
                 </div>
@@ -62,20 +62,20 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/coding-image-3.png">
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-3.png"></a>
                         </div>
                         <div class="project-title">
-                            <h3>Client Site App</h3>
+                            <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
                             <h4>APIs/JSON</h4>
                         </div>
                     </div>
 
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/coding-image-2.png">
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-2.png"></a>
                         </div>
                         <div class="project-title">
-                            <h3>Web App</h3>
+                            <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
                             <h4>Node/IoT</h4>
                         </div>
                     </div>
@@ -84,19 +84,19 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/coding-image-3.jpg">
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-3.jpg"></a>
                         </div>
                         <div class="project-title">
-                            <h3>EasyGo Game</h3>
+                            <a href=https://github.com/MCunha17><h3>EasyGo Game</h3></a>
                             <h4>React/NoSQL</h4>
                         </div>
                     </div>
                     <div class="project">
                         <div class="card">
-                            <img src="/assets/coding-image.png">
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image.png">
                         </div>
                             <div class="project-title">
-                                <h3>Single-Page App</h3>
+                                <a href="https://github.com/MCunha17"><h3>Single-Page App</h3></a>
                                 <h4>MERN Stack</h4>
                             </div>
                         </div>
@@ -111,8 +111,7 @@
                 <h2 id="contact">Contact</h2>
             </article>
             <article class="footer">
-                <div>Phone</div>
-                <div>Email</div>
-                <div>GitHub</div>
+                <div>312-888-6917</div>
+                <div>cunha.maria.theresa@gmail.com</div>
             </article>
         </section>
