--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <h2 id="about">About</h2>
             </article>
             <article class="content-2">
-
                 <div class="profile">
                     <div class="maria">
                         <img class="cunha" src="/assets/maria-cunha.jpeg">
@@ -40,15 +39,12 @@
             </article>
         </section>
 
-        <!-- Projects Section -->
+        <!-- Work Section -->
         <section>
-            <!-- Work Title -->
             <article class="aside">
                 <h2 id="work">Work</h2>
             </article>
-            <!-- Project -->
             <article class="content">
-
                 <div class="projects-1">
                     <div class="primary-image-column">
                         <img class="primary-image" src="/assets/refactored-site.png"></a>
@@ -62,7 +58,7 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-3.png"></a>
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-4.jpg"></a>
                         </div>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
@@ -72,7 +68,7 @@
 
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-2.png"></a>
+                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-6.jpg"></a>
                         </div>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
@@ -91,6 +87,7 @@
                             <h4>React/NoSQL</h4>
                         </div>
                     </div>
+
                     <div class="project">
                         <div class="card">
                             <a href="https://github.com/MCunha17"><img src="/assets/coding-image.png">
@@ -106,6 +103,7 @@
             </article>
         </section>
 
+        <!-- Contact Section -->
         <section>
             <article class="aside">
                 <h2 id="contact">Contact</h2>
