--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Maria Cunha Portfolio</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             <article class="content-2">
                 <div class="profile">
                     <div class="maria">
-                        <img class="cunha" src="/assets/maria-cunha.jpeg">
+                        <img class="cunha" src="./maria-cunha.jpeg">
                     </div>
                     <div class="bio">
                         <p>As a product marketing professional, I have spent the last few years working in the tech industry, promoting and launching software products. However, I have always had a passion for technology and a desire to be more involved in the development process. Over time, I have come to realize that I want to transition into a career as a developer. My background in product marketing has provided me with valuable skills such as project management, collaboration, and communication. I have worked closely with development teams and have a solid understanding of the software development process. However, I want to expand my skill set and become more involved in the technical aspects of product development. To achieve this, I have been taking online courses in programming languages such as Python and JavaScript. I have also been working on personal projects, such as building simple web applications, to gain hands-on experience. My goal is to become a full-stack developer and contribute to the creation of innovative software products. I am excited about the prospect of combining my marketing background with my newfound technical skills to create impactful products. I am confident that my strong work ethic, determination, and willingness to learn will enable me to succeed in this new career path.</p>
@@ -47,7 +47,7 @@
             <article class="content">
                 <div class="projects-1">
                     <div class="primary-image-column">
-                        <img class="primary-image" src="/assets/refactored-site.png"></a>
+                        <img class="primary-image" src="./refactored-site.png"></a>
                     </div>
                     <div class="primary-project-title">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h3>Refactored Code</h3></a>
@@ -58,7 +58,7 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-4.jpg"></a>
+                            <a href="https://github.com/MCunha17"><img src="./coding-image-4.jpg"></a>
                         </div>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
@@ -68,7 +68,7 @@
 
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-6.jpg"></a>
+                            <a href="https://github.com/MCunha17"><img src="./coding-image-6.jpg"></a>
                         </div>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
@@ -80,7 +80,7 @@
                 <div class="projects-2">
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image-3.jpg"></a>
+                            <a href="https://github.com/MCunha17"><img src="./coding-image-3.jpg"></a>
                         </div>
                         <div class="project-title">
                             <a href=https://github.com/MCunha17><h3>EasyGo Game</h3></a>
@@ -90,7 +90,7 @@
 
                     <div class="project">
                         <div class="card">
-                            <a href="https://github.com/MCunha17"><img src="/assets/coding-image.png">
+                            <a href="https://github.com/MCunha17"><img src="./coding-image.png">
                         </div>
                             <div class="project-title">
                                 <a href="https://github.com/MCunha17"><h3>Single-Page App</h3></a>
