--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <article class="primary-project-content">
                 <!-- Refactored Code Project -->
                 <element class="primary-project-column">
-                        <img class="primary-project-image" src="./refactored-site.png"></a>
+                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><img class="primary-project-image" src="./refactored-site.png" alt="Refactored Site Image"></a>
                     <div class="primary-project-title">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h3>Refactored Code</h3></a>
                         <h4>HTML/CSS/JS</h4>
@@ -65,7 +65,7 @@
             <article class="secondary-project-content">
                     <!-- Client Site App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./client-site-app.jpg"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="./client-site-app.jpg" alt="Client Site App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
                             <h4>APIs/JSON</h4>
@@ -73,7 +73,7 @@
                     </element>
                     <!-- Web App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./web-app.jpg"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="./web-app.jpg" alt="Web App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
                             <h4>Node/IoT</h4>
@@ -81,7 +81,7 @@
                     </element>
                     <!-- EasyGo Game Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./easygo-game.jpg"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="./easygo-game.jpg" alt="EasyGo Game Image"></a>
                         <div class="project-title">
                             <a href=https://github.com/MCunha17><h3>EasyGo Game</h3></a>
                             <h4>React/NoSQL</h4>
@@ -89,7 +89,7 @@
                     </element>
                     <!-- Single-Page App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./singe-page-app.jpg"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="./singe-page-app.jpg" alt="Single Page App Image"></a>
                             <div class="project-title">
                                 <a href="https://github.com/MCunha17"><h3>Single-Page App</h3></a><h4>MERN Stack</h4>
                             </div>
