--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Maria Cunha Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                 <!-- Self Photo -->
                 <element class="profile">
                     <div class="portrait-container">
-                        <img class="portrait" src="./maria-cunha.jpeg" alt="Self Photo">
+                        <img class="portrait" src="assets/images/maria-cunha.jpeg" alt="Self Photo">
                     </div>
                     <!-- About Paragraph -->
                     <div class="bio">
@@ -55,7 +55,7 @@
             <article class="primary-project-content">
                 <!-- Refactored Code Project -->
                 <element class="primary-project-column">
-                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><img class="primary-project-image" src="./refactored-site.png" alt="Refactored Site Image"></a>
+                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><img class="primary-project-image" src="assets/images/refactored-site.png" alt="Refactored Site Image"></a>
                     <div class="primary-project-title">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h3>Refactored Code</h3></a>
                         <h4>HTML/CSS/JS</h4>
@@ -65,7 +65,7 @@
             <article class="secondary-project-content">
                     <!-- Client Site App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./client-site-app.jpg" alt="Client Site App Image"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/client-site-app.jpg" alt="Client Site App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
                             <h4>APIs/JSON</h4>
@@ -73,7 +73,7 @@
                     </element>
                     <!-- Web App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./web-app.jpg" alt="Web App Image"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/web-app.jpg" alt="Web App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
                             <h4>Node/IoT</h4>
@@ -81,7 +81,7 @@
                     </element>
                     <!-- EasyGo Game Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./easygo-game.jpg" alt="EasyGo Game Image"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/easygo-game.jpg" alt="EasyGo Game Image"></a>
                         <div class="project-title">
                             <a href=https://github.com/MCunha17><h3>EasyGo Game</h3></a>
                             <h4>React/NoSQL</h4>
@@ -89,7 +89,7 @@
                     </element>
                     <!-- Single-Page App Project -->
                     <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="./singe-page-app.jpg" alt="Single Page App Image"></a>
+                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/single-page-app.jpg" alt="Single Page App Image"></a>
                             <div class="project-title">
                                 <a href="https://github.com/MCunha17"><h3>Single-Page App</h3></a><h4>MERN Stack</h4>
                             </div>
