--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <!-- Page Title -->
         <h1>Maria Cunha's Portfolio</h1>
+        <h2 id="subtitle">Welcome to my portfolio!</h2>
         <!-- Navigation -->
         <nav>
             <ul>
@@ -25,11 +26,11 @@
         <!-- About Section -->
         <section>
             <article class="aside">
-                <h2 id="about">About</h2>
+                <h3 id="about">About</h3>
             </article>
             <article class="about-content">
                 <!-- Self Photo -->
-                <element class="profile">
+                <div class="profile">
                     <div class="portrait-container">
                         <img class="portrait" src="assets/images/maria-cunha.jpeg" alt="Self Photo">
                     </div>
@@ -42,66 +43,71 @@
                             I'm currently expanding my technical skills through a coding bootcamp and personal projects. My goal is to become a full-stack developer and contribute to the creation of innovative software. I'm thrilled at the opportunity to combine my marketing background with my newfound technical skills to create impactful solutions.
                         </p>
                     </div>
-                </element>
+                </div>
             </article>
         </section>
 
         <!-- Work Section -->
         <section>
             <article class="aside">
-                <h2 id="work">Work</h2>
+                <h3 id="work">Work</h3>
             </article>
             <!-- Top Project Photo -->
             <article class="primary-project-content">
                 <!-- Refactored Code Project -->
-                <element class="primary-project-column">
-                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><img class="primary-project-image" src="assets/images/refactored-site.png" alt="Refactored Site Image"></a>
+                <div class="primary-project-column">
+                        <a href="https://mcunha17.github.io/accessibility-site-refactor/">
+                            <img class="primary-project-image" src="assets/images/refactored-site.png" alt="Refactored Site Image"></a>
                     <div class="primary-project-title">
-                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h3>Refactored Code</h3></a>
-                        <h4>HTML/CSS/JS</h4>
+                        <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h4>Refactored Code</h4></a>
+                        <h5>HTML/CSS/JS</h5>
                     </div>
-                </element>
+                </div>
                 <!-- Bottom Project Photos -->
             <article class="secondary-project-content">
                     <!-- Client Site App Project -->
-                    <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/client-site-app.jpg" alt="Client Site App Image"></a>
+                    <div class="card">
+                        <a href="https://github.com/MCunha17">
+                            <img class="project-image" src="/assets/images/client-site-app.jpg" alt="Client Site App Image"></a>
                         <div class="project-title">
-                            <a href="https://github.com/MCunha17"><h3>Client Site App</h3></a>
-                            <h4>APIs/JSON</h4>
+                            <a href="https://github.com/MCunha17"><h4>Client Site App</h4></a>
+                            <h5>APIs/JSON</h5>
                         </div>
-                    </element>
+                    </div>
                     <!-- Web App Project -->
-                    <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/web-app.jpg" alt="Web App Image"></a>
+                    <div class="card">
+                        <a href="https://github.com/MCunha17">
+                            <img class="project-image" src="/assets/images/web-app.jpg" alt="Web App Image"></a>
                         <div class="project-title">
-                            <a href="https://github.com/MCunha17"><h3>Web App</h3></a>
-                            <h4>Node/IoT</h4>
+                            <a href="https://github.com/MCunha17"><h4>Web App</h4></a>
+                            <h5>Node/IoT</h5>
                         </div>
-                    </element>
+                    </div>
                     <!-- EasyGo Game Project -->
-                    <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/easygo-game.jpg" alt="EasyGo Game Image"></a>
+                    <div class="card">
+                        <a href="https://github.com/MCunha17">
+                            <img class="project-image" src="/assets/images/easygo-game.jpg" alt="EasyGo Game Image"></a>
                         <div class="project-title">
-                            <a href=https://github.com/MCunha17><h3>EasyGo Game</h3></a>
-                            <h4>React/NoSQL</h4>
+                            <a href=https://github.com/MCunha17><h4>EasyGo Game</h4></a>
+                            <h5>React/NoSQL</h5>
                         </div>
-                    </element>
+                    </div>
                     <!-- Single-Page App Project -->
-                    <element class="card">
-                        <a href="https://github.com/MCunha17"><img class="project-image" src="/assets/images/single-page-app.jpg" alt="Single Page App Image"></a>
-                            <div class="project-title">
-                                <a href="https://github.com/MCunha17"><h3>Single-Page App</h3></a><h4>MERN Stack</h4>
-                            </div>
+                    <div class="card">
+                        <a href="https://github.com/MCunha17">
+                            <img class="project-image" src="/assets/images/single-page-app.jpg" alt="Single Page App Image"></a>
+                        <div class="project-title">
+                            <a href="https://github.com/MCunha17"><h4>Single-Page App</h4></a>
+                            <h5>MERN Stack</h5>
                         </div>
-                    </element>
+                    </div>
             </article>
         </section>
 
         <!-- Contact Section -->
         <section>
             <article class="aside">
-                <h2 id="contact">Contact</h2>
+                <h3 id="contact">Contact</h3>
             </article>
             <article class="contact">
                 <div id="phone">312-888-6917</div>
@@ -109,6 +115,8 @@
                 <div id="git-hub"><a href="https://github.com/MCunha17">MCunha17</a></div>
             </article>
         </section>
+    </main>
+</body>
 
 <!-- Footer Section-->
 <footer>
