Moved images to main branch so they appear on published page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Maria Cunha Portfolio</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 <!-- Self Photo -->
                 <div class="profile">
                     <div class="portrait-container">
-                        <img class="portrait" src="./assets/images/maria-cunha.jpeg" alt="Self Photo">
+                        <img class="portrait" src="maria-cunha.jpeg" alt="Self Photo">
                     </div>
                     <!-- About Paragraph -->
                     <div class="bio">
@@ -57,7 +57,7 @@
                 <!-- Refactored Code Project -->
                 <div class="primary-project-column">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/">
-                            <img class="primary-project-image" src="./assets/images/refactored-site.png" alt="Refactored Site Image"></a>
+                            <img class="primary-project-image" src="refactored-site.png" alt="Refactored Site Image"></a>
                     <div class="primary-project-title">
                         <a href="https://mcunha17.github.io/accessibility-site-refactor/"><h4>Refactored Code</h4></a>
                         <h5>HTML/CSS/JS</h5>
@@ -68,7 +68,7 @@
                     <!-- Client Site App Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="./assets/images/client-site-app.jpg" alt="Client Site App Image"></a>
+                            <img class="project-image" src="client-site-app.jpg" alt="Client Site App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h4>Client Site App</h4></a>
                             <h5>APIs/JSON</h5>
@@ -77,7 +77,7 @@
                     <!-- Web App Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="./assets/images/web-app.jpg" alt="Web App Image"></a>
+                            <img class="project-image" src="web-app.jpg" alt="Web App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h4>Web App</h4></a>
                             <h5>Node/IoT</h5>
@@ -86,7 +86,7 @@
                     <!-- EasyGo Game Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="./assets/images/easygo-game.jpg" alt="EasyGo Game Image"></a>
+                            <img class="project-image" src="easygo-game.jpg" alt="EasyGo Game Image"></a>
                         <div class="project-title">
                             <a href=https://github.com/MCunha17><h4>EasyGo Game</h4></a>
                             <h5>React/NoSQL</h5>
@@ -95,7 +95,7 @@
                     <!-- Single-Page App Project -->
                     <div class="card">
                         <a href="https://github.com/MCunha17">
-                            <img class="project-image" src="./assets/images/single-page-app.jpg" alt="Single Page App Image"></a>
+                            <img class="project-image" src="single-page-app.jpg" alt="Single Page App Image"></a>
                         <div class="project-title">
                             <a href="https://github.com/MCunha17"><h4>Single-Page App</h4></a>
                             <h5>MERN Stack</h5>
